--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,40 @@
 
 buildscript {
     ext{
+        androidCompileSdkVersion = 28
+        androidMinSdkVersion = 16
+        androidTargetSdkVersion = 28
+
         kotlin_version = '1.3.11'
-        room_version = '1.1.1'
-        archLifecycle_version = '1.1.1'
+        gradle_version = '3.2.1'
+
+        lifecycle_extensions_version = '2.0.0'
+        lifecycle_compiler_version = '2.0.0'
+
+        appcompat_version = '1.0.2'
+
+        testrunner_version = '1.1.1'
+
+        espresso_core_version = '3.1.1'
+
+        junit_version = '4.12'
+
+        threeTenABP_version = '1.1.1'
+
+        room_runtime_version='2.0.0'
+        room_compiler_version='2.0.0'
+        room_testing_version ='2.0.0'
+
+        ktlint_version = '0.29.0'
+
+        mockk_version = '1.8.13.kotlin13'
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
