--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,8 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Enable AndroidX (see https://developer.android.com/jetpack/androidx/migrate)
+android.useAndroidX=true
+android.enableJetifier=true
+# When configured, Gradle will run in incubating parallel mode.
+org.gradle.parallel=true
