Added unit testing to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ before_install:
 
 script:
  - ./gradlew ktlintFormat
+ - ./gradlew test
  - ./gradlew build assembleAndroidTest
  - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
  - emulator -avd test -no-skin -no-audio -no-window &
