--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,11 @@ org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enable AndroidX (see https://developer.android.com/jetpack/androidx/migrate)
 android.useAndroidX=true
 android.enableJetifier=true
 # When configured, Gradle will run in incubating parallel mode.
-org.gradle.parallel=true
+org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_161
