Removed own JDK location (part of #FAIT-47)

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.enableJetifier=true
 # When configured, Gradle will run in incubating parallel mode.
-org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_161
+# !!! Change to own JDK location and preferably move to a changelist you won't be pushing
+# org.gradle.java.home=C\:\\Program Files\\Java\\jdk1.8.0_161
