--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         kotlin_version = '1.3.11'
         gradle_version = '3.2.1'
 
+        aac_core_version = '2.0.0-rc01'
+
         lifecycle_extensions_version = '2.0.0'
         lifecycle_compiler_version = '2.0.0'
 
