--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
         kotlin_version = '1.3.11'
         gradle_version = '3.2.1'
 
+        constraint_layout_version = '1.1.3'
+
+        dagger_version = '2.16'
+
         aac_core_version = '2.0.0-rc01'
 
         lifecycle_extensions_version = '2.0.0'
@@ -24,9 +28,13 @@ buildscript {
 
         threeTenABP_version = '1.1.1'
 
-        room_runtime_version='2.0.0'
-        room_compiler_version='2.0.0'
-        room_testing_version ='2.0.0'
+        rxjava_version = '2.2.2'
+        rxjava_android_version = '2.1.0'
+
+        room_runtime_version='2.1.0-alpha01'
+        room_compiler_version='2.1.0-alpha01'
+        room_testing_version ='2.1.0-alpha01'
+        room_rxjava_version = '2.1.0-alpha03'
 
         ktlint_version = '0.29.0'
 
