--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,6 +8,10 @@ dependencies {
     //Date/time library (see https://github.com/JakeWharton/ThreeTenABP)
     api "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version"
 
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxjava_android_version"
+    implementation "androidx.room:room-rxjava2:$room_rxjava_version"
     // TESTING LIBRARIES
     testImplementation "junit:junit:$junit_version"
     testImplementation "io.mockk:mockk:$mockk_version"
