--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'kotlin'
 
+apply plugin: 'kotlin-kapt'
+
 dependencies {
     implementation project(':domain')
 
@@ -13,4 +15,13 @@ dependencies {
     // TESTING LIBRARIES
     testImplementation "junit:junit:$junit_version"
     testImplementation "io.mockk:mockk:$mockk_version"
+
+    // Dagger core
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+
+    //TODO: check if Dagger android is needed here, or at all
+    // Dagger Android
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
 }
