Finalised clean architecture base Still some TODO's left, like moving database module dep back to service module Testing and documentation follows

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     //Depends on domain module
     implementation project(':domain')
     implementation project(':service')
+    //TODO: find a way to move this to service module so app doesn't directly depend on database
+    implementation project(':database')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -44,14 +46,16 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
 
-    // Dagger core
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger:$dagger_version"
+    //Date/time library (see https://github.com/JakeWharton/ThreeTenABP)
+    api "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version"
 
-    // Dagger Android
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_extensions_version"
+    // Koin Android (Dependency Injection)
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+
+    // Rxjava
+    implementation "io.reactivex.rxjava2:rxandroid:$rxjava_android_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
 
     //Testing libraries
     testImplementation "junit:junit:$junit_version"
