--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
         constraint_layout_version = '1.1.3'
 
-        dagger_version = '2.16'
+        koin_version = '1.0.2'
 
         aac_core_version = '2.0.0-rc01'
 
@@ -31,9 +31,9 @@ buildscript {
         rxjava_version = '2.2.2'
         rxjava_android_version = '2.1.0'
 
-        room_runtime_version='2.1.0-alpha01'
-        room_compiler_version='2.1.0-alpha01'
-        room_testing_version ='2.1.0-alpha01'
+        room_runtime_version='2.1.0-alpha03'
+        room_compiler_version='2.1.0-alpha03'
+        room_testing_version ='2.1.0-alpha03'
         room_rxjava_version = '2.1.0-alpha03'
 
         ktlint_version = '0.29.0'
