chore: Updated travis to do strict format checking
Previously ktlintFormat was ran when building, but this does the
formatting and then tests if linting succeeds. This however does does
not guarantee that the code in the repo is linted correctly.
Now pushed code will have to be linted correctly beforehand.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_install:
  - yes | sdkmanager "platforms;android-28"
 
 script:
- - ./gradlew ktlintFormat
+ - ./gradlew ktlint
  - ./gradlew test
  - ./gradlew build assembleAndroidTest
  - echo no | android create avd --force --name test --target $ANDROID_TARGET --abi $ANDROID_ABI
