--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,32 +34,33 @@ android {
 }
 
 dependencies {
-    //Depends on domain module
     implementation project(':domain')
     implementation project(':service')
-    //TODO: find a way to move this to service module so app doesn't directly depend on database
     implementation project(':database')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    def commonDependencies = rootProject.ext.commonDependencies
+    def injectionDependencies = rootProject.ext.injectionDependencies
+    def androidTestDependencies = rootProject.ext.androidTestDependencies
+    def androidDependencies = rootProject.ext.androidDependencies
+
+    implementation commonDependencies.kotlin
+    implementation commonDependencies.threeTenABP
+    implementation commonDependencies.rxjava
+    implementation commonDependencies.rxandroid
+
+    testImplementation testDependencies.junit
+    testImplementation testDependencies.mockk
+
+    implementation injectionDependencies.koin
+    implementation injectionDependencies.koin_viewModel
+
+    androidTestImplementation androidTestDependencies.testRunner
+    androidTestImplementation androidTestDependencies.espresso
+
+    implementation androidDependencies.appcompat
+
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
-
-    //Date/time library (see https://github.com/JakeWharton/ThreeTenABP)
-    api "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version"
-
-    // Koin Android (Dependency Injection)
-    implementation "org.koin:koin-android:$koin_version"
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
-
-    // Rxjava
-    implementation "io.reactivex.rxjava2:rxandroid:$rxjava_android_version"
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-
-    //Testing libraries
-    testImplementation "junit:junit:$junit_version"
-    androidTestImplementation "androidx.test:runner:$testrunner_version"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 
 }
