--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
+//All dependencies are gathered in this file
+apply from: 'dependencies.gradle'
 buildscript {
-    ext{
-        androidCompileSdkVersion = 28
-        androidMinSdkVersion = 19
-        androidTargetSdkVersion = 28
-
-        kotlin_version = '1.3.11'
-        gradle_version = '3.3.0'
-
-        constraint_layout_version = '1.1.3'
-
-        koin_version = '1.0.2'
-
-        aac_core_version = '2.0.0-rc01'
-
-        lifecycle_extensions_version = '2.0.0'
-        lifecycle_compiler_version = '2.0.0'
-
-        appcompat_version = '1.0.2'
-
-        testrunner_version = '1.1.1'
-
-        espresso_core_version = '3.1.1'
-
-        junit_version = '4.12'
-
-        threeTenABP_version = '1.1.1'
-
-        rxjava_version = '2.2.2'
-        rxjava_android_version = '2.1.0'
-
-        room_runtime_version='2.1.0-alpha03'
-        room_compiler_version='2.1.0-alpha03'
-        room_testing_version ='2.1.0-alpha03'
-        room_rxjava_version = '2.1.0-alpha03'
-
-        ktlint_version = '0.29.0'
-
-        mockk_version = '1.8.13.kotlin13'
-    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:3.3.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
