--- a/service/build.gradle
+++ b/service/build.gradle
@@ -7,18 +7,15 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    def commonDependencies = rootProject.ext.commonDependencies
+    def injectionDependencies = rootProject.ext.injectionDependencies
 
-    //Date/time library (see https://github.com/JakeWharton/ThreeTenABP)
-    implementation "com.jakewharton.threetenabp:threetenabp:$threeTenABP_version"
+    implementation commonDependencies.kotlin
+    implementation commonDependencies.threeTenABP
+    implementation commonDependencies.rxjava
 
-    // TESTING LIBRARIES
-    testImplementation "junit:junit:$junit_version"
-    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation testDependencies.junit
+    testImplementation testDependencies.mockk
 
-    //Rxjava
-    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    
-    // Koin Android (Dependency Injection)
-    implementation "org.koin:koin-android:$koin_version"
+    implementation injectionDependencies.koin
 }
