feat: Adds dependency on Android Draw library
This library will be used to draw the emotional avatar
Issue #FAITH-8

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,6 @@ dependencies {
     implementation androidDependencies.appcompat
 
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation 'com.github.divyanshub024:AndroidDraw:v0.1'
 
 }
