--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-
 //All dependencies are gathered in this file
 apply from: 'dependencies.gradle'
 buildscript {
@@ -21,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     apply from: "$rootDir/ktlint.gradle"
 }
