--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,6 @@ dependencies {
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     implementation 'com.github.divyanshub024:AndroidDraw:v0.1'
 
+    // Android Architecture Components Core
+    testImplementation "androidx.arch.core:core-testing:$aac_core_version"
 }
