--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,8 @@ ext {
     kotlin_version = '1.3.11'
     gradle_version = '3.3.0'
 
-    constraint_layout_version = '1.1.3'
+    constraint_layout_version = '2.0.0-alpha3'
+    fragment_version = '1.1.0-alpha03'
 
     koin_version = '1.0.2'
 
@@ -72,4 +73,10 @@ ext {
             room_compiler: "androidx.room:room-compiler:$room_compiler_version",
             room_testing : "androidx.room:room-testing:$room_testing_version"
     ]
+
+    uiDependencies = [
+            constraintLayout : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+            fragment : "androidx.fragment:fragment:$fragment_version"
+    ]
+
 }
