--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="be.hogent.faith">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="be.hogent.faith">
+
     <application
             android:name=".faith.App"
             android:allowBackup="true"
@@ -7,8 +9,11 @@
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+            android:theme="@style/AppTheme"
+            tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
+                android:screenOrientation="landscape"
+                android:configChanges="orientation|keyboardHidden"
                 android:theme="@style/Theme.AppCompat.Light"
                 android:label="@string/app_name"
                 android:name=".faith.ui.MainActivity">
