--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation project(':domain')
     implementation project(':service')
     implementation project(':database')
+    implementation project(':draw')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -57,11 +58,13 @@ dependencies {
 
 
     implementation androidDependencies.appcompat
+    implementation androidDependencies.lifecycle
+
 
     implementation uiDependencies.constraintLayout
     implementation uiDependencies.fragment
 
-    implementation 'com.github.divyanshub024:AndroidDraw:v0.1'
+//    implementation 'com.github.divyanshub024:AndroidDraw:v0.1'
 
     //TESTING
     //Required to test fragments in isolation
