--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ buildscript {
         lifecycle_compiler_version = '2.0.0'
 
         appcompat_version = '1.0.2'
+        appcompat_version_new = "28.0.0"
+        support_design = "28.3.0"
+
+        picasso_version = '2.71828'
+        glide_version = "4.8.0"
 
         testrunner_version = '1.1.1'
 
