--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
     dataBinding {
         enabled = true
     }
-
+    testOptions {
+        animationsDisabled = true
+    }
     kapt {
         generateStubs = true
     }
