Fix: add Room DB schema to VCS
This allows us to track different database versions in VCS, which
should help when performing and testing database version migrations.

--- a/database/build.gradle
+++ b/database/build.gradle
@@ -16,6 +16,15 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
+        sourceSets {
+            androidTest.assets.srcDirs +=
+                    files("$projectDir/schemas".toString())
+        }
     }
 
     buildTypes {
