--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,7 +21,7 @@ ext {
 
     appcompat_version = '1.0.2'
 
-    testrunner_version = '1.1.1'
+    testrunner_version = '1.1.0'
 
     espresso_core_version = '3.1.1'
 
@@ -64,7 +64,7 @@ ext {
     ]
 
     androidTestDependencies = [
-            testRunner: "androidx.test:runner:$testrunner_version",
+            testRunner: "androidx.test.ext:junit:$testrunner_version",
             espresso  : "androidx.test.espresso:espresso-core:$espresso_core_version"
     ]
 
