feat: Add storage module
The storage module is responsible for saving and retrieving files from
the phones internal and external (SD-card storage).
FAITH-8

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':domain', ':database', ':service', ':draw'
+include ':app', ':domain', ':database', ':service', ':draw', ':storage'
