--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
                 android:screenOrientation="landscape"
                 android:configChanges="orientation|keyboardHidden"
-                android:theme="@style/Theme.AppCompat.Light"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
                 android:label="@string/app_name"
                 android:name=".faith.ui.MainActivity">
 
