--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -65,7 +65,8 @@ ext {
 
     androidTestDependencies = [
             testRunner: "androidx.test.ext:junit:$testrunner_version",
-            espresso  : "androidx.test.espresso:espresso-core:$espresso_core_version"
+            espresso  : "androidx.test.espresso:espresso-core:$espresso_core_version",
+            aac_core  : "androidx.arch.core:core-testing:$aac_core_version"
     ]
 
     injectionDependencies = [
