feat: Adds simple layout file for event details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,15 +58,12 @@ dependencies {
     implementation injectionDependencies.koin
     implementation injectionDependencies.koin_viewModel
 
-
     implementation androidDependencies.appcompat
     implementation androidDependencies.lifecycle
 
-
     implementation uiDependencies.constraintLayout
+    implementation uiDependencies.recyclerview
     implementation uiDependencies.fragment
-
-//    implementation 'com.github.divyanshub024:AndroidDraw:v0.1'
 
     //TESTING
     //Required to test fragments in isolation
