--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,6 +9,7 @@ ext {
 
     constraint_layout_version = '2.0.0-alpha3'
     fragment_version = '1.1.0-alpha03'
+    recyclerview_version = '1.0.0'
 
     coroutines_version = '1.0.0'
     coroutines_android_version = '1.0.0'
@@ -82,6 +83,7 @@ ext {
 
     uiDependencies = [
             constraintLayout: "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+            recyclerview    : "androidx.recyclerview:recyclerview:$recyclerview_version",
             fragment        : "androidx.fragment:fragment:$fragment_version"
     ]
 
