--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="be.hogent.faith">
 
-    <supports-screens android:resizeable="true"
-        android:smallScreens="false"
-        android:normalScreens="true"
-        android:largeScreens="true"
-        android:xlargeScreens="true"
-        android:anyDensity="true"/>
+    <supports-screens
+            android:resizeable="true"
+            android:smallScreens="false"
+            android:normalScreens="true"
+            android:largeScreens="true"
+            android:xlargeScreens="true"
+            android:anyDensity="true"/>
     <application
             android:name=".faith.App"
             android:allowBackup="true"
@@ -18,7 +19,7 @@
             android:theme="@style/AppTheme"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-                android:theme="@style/Theme.AppCompat.Light"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
                 android:label="@string/app_name"
                 android:name=".faith.ui.MainActivity">
 
