fix: AAC testing library moved to testImpl Was previously AndroidTestImplementation but it is required for testing on the machine, not the device.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,8 @@ dependencies {
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
+    testImplementation androidTestDependencies.aac_core
 
     androidTestImplementation androidTestDependencies.testRunner
     androidTestImplementation androidTestDependencies.espresso
-    androidTestImplementation androidTestDependencies.aac_core
 }
