feat: Add FotoApparat library
FAITH-13

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation uiDependencies.recyclerview
     implementation uiDependencies.constraintLayout
     implementation uiDependencies.fragment
+    implementation uiDependencies.fotoApparat
 
     //TESTING
     //Required to test fragments in isolation
