--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,24 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'composer'
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+    dependencies {
+        classpath 'com.github.trevjonez.composer-gradle-plugin:plugin:0.10.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+    }
+}
+
+
+composer{
+}
+
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfig["androidCompileSdkVersion"]
@@ -33,46 +51,39 @@ android {
     }
 }
 
-dependencies {
-    implementation project(':domain')
-    implementation project(':service')
-    implementation project(':database')
-    implementation project(':draw')
+    dependencies {
+        implementation project(':domain')
+        implementation project(':service')
+        implementation project(':database')
+        implementation project(':draw')
+        implementation fileTree(include: ['*.jar'], dir: 'libs')
+        def commonDependencies = rootProject.ext.commonDependencies
+        def injectionDependencies = rootProject.ext.injectionDependencies
+        def androidTestDependencies = rootProject.ext.androidTestDependencies
+        def androidDependencies = rootProject.ext.androidDependencies
+        def uiDependencies = rootProject.ext.uiDependencies
+        implementation commonDependencies.kotlin
+        implementation commonDependencies.threeTenABP
+        implementation commonDependencies.rxjava
+        implementation commonDependencies.rxandroid
+        implementation injectionDependencies.koin
+        implementation injectionDependencies.koin_viewModel
+        implementation androidDependencies.appcompat
+        implementation androidDependencies.lifecycle
+        implementation uiDependencies.glide
+        kapt uiDependencies.glidecompiler
+        implementation uiDependencies.recyclerview
+        implementation uiDependencies.constraintLayout
+        implementation uiDependencies.fragment
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+        //TESTING
 
-    def commonDependencies = rootProject.ext.commonDependencies
-    def injectionDependencies = rootProject.ext.injectionDependencies
-    def androidTestDependencies = rootProject.ext.androidTestDependencies
-    def androidDependencies = rootProject.ext.androidDependencies
-    def uiDependencies = rootProject.ext.uiDependencies
-
-    implementation commonDependencies.kotlin
-    implementation commonDependencies.threeTenABP
-    implementation commonDependencies.rxjava
-    implementation commonDependencies.rxandroid
-
-    implementation injectionDependencies.koin
-    implementation injectionDependencies.koin_viewModel
-
-    implementation androidDependencies.appcompat
-    implementation androidDependencies.lifecycle
-
-    implementation uiDependencies.glide
-    kapt uiDependencies.glidecompiler
-    implementation uiDependencies.recyclerview
-    implementation uiDependencies.constraintLayout
-    implementation uiDependencies.fragment
-
-    //TESTING
-    //Required to test fragments in isolation
-    debugImplementation 'androidx.test:monitor:1.1.1'
-    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha04'
-
-    testImplementation testDependencies.junit
-    testImplementation testDependencies.mockk
-    testImplementation "androidx.arch.core:core-testing:$aac_core_version"
-
-    androidTestImplementation androidTestDependencies.testRunner
-    androidTestImplementation androidTestDependencies.espresso
-}
+        //Required to test fragments in isolation
+        debugImplementation 'androidx.test:monitor:1.1.1'
+        debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha04'
+        testImplementation testDependencies.junit
+        testImplementation testDependencies.mockk
+        testImplementation "androidx.arch.core:core-testing:$aac_core_version"
+        androidTestImplementation androidTestDependencies.testRunner
+        androidTestImplementation androidTestDependencies.espresso
+    }
