--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 //All dependencies are gathered in this file
 apply from: 'dependencies.gradle'
+
+
 buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
@@ -23,6 +26,7 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
     apply from: "$rootDir/ktlint.gradle"
+
 }
 
 task clean(type: Delete) {
