--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -87,7 +87,8 @@ ext {
             fragment        : "androidx.fragment:fragment:$fragment_version",
             glide           : "com.github.bumptech.glide:glide:$glide_version",
             glidecompiler   : "com.github.bumptech.glide:compiler:$glide_version",
-            recyclerview    : "com.android.support:recyclerview-v7:$recyclerview_version"
+            recyclerview    : "com.android.support:recyclerview-v7:$recyclerview_version",
+            implementation  : "androidx.recyclerview:recyclerview-selection:$recyclerview_version"
     ]
 
 }
