feat: add TakePhotoFragment with custom CameraView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="be.hogent.faith">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.permission.CAMERA"/>
+
     <supports-screens
             android:resizeable="true"
             android:smallScreens="false"
