[feat] Make the items in the recyclerview clickable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ android {
         implementation uiDependencies.recyclerview
         implementation uiDependencies.constraintLayout
         implementation uiDependencies.fragment
-
+        implementation uiDependencies.rv_selection
         //TESTING
 
 
