--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -88,7 +88,7 @@ ext {
             glide           : "com.github.bumptech.glide:glide:$glide_version",
             glidecompiler   : "com.github.bumptech.glide:compiler:$glide_version",
             recyclerview    : "com.android.support:recyclerview-v7:$recyclerview_version",
-            implementation  : "androidx.recyclerview:recyclerview-selection:$recyclerview_version"
+            rv_selection    : "androidx.recyclerview:recyclerview-selection:$recyclerview_version"
     ]
 
 }
