feat: ensure photo thumbnails are added to list
Also adds simple UI test to check this, but currently it requires
the Espresso thread to sleep, which isn't clean.
FAITH-13

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     testImplementation testDependencies.mockk
     testImplementation androidTestDependencies.aac_core
 
+    androidTestImplementation androidTestDependencies.testCore
+    androidTestImplementation androidTestDependencies.testRules
     androidTestImplementation androidTestDependencies.testRunner
     androidTestImplementation androidTestDependencies.espresso
+    androidTestImplementation androidTestDependencies.espressoContrib
 }
