--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,7 +9,7 @@ ext {
 
     constraint_layout_version = '2.0.0-alpha3'
     fragment_version = '1.1.0-alpha03'
-    recyclerview_version='1.0.0'
+    recyclerview_version = '1.0.0'
     glide_version = '4.8.0'
 
     coroutines_version = '1.0.0'
@@ -24,8 +24,10 @@ ext {
     appcompat_version = '1.0.2'
 
     testrunner_version = '1.1.0'
+    testcore_version = '1.0.0'
 
     espresso_core_version = '3.1.1'
+    espresso_contrib_version = '3.1.1'
 
     junit_version = '4.12'
 
@@ -68,9 +70,12 @@ ext {
     ]
 
     androidTestDependencies = [
-            testRunner: "androidx.test.ext:junit:$testrunner_version",
-            espresso  : "androidx.test.espresso:espresso-core:$espresso_core_version",
-            aac_core  : "androidx.arch.core:core-testing:$aac_core_version"
+            testCore       : "androidx.test:core:$testcore_version",
+            testRunner     : "androidx.test.ext:junit:$testrunner_version",
+            espresso       : "androidx.test.espresso:espresso-core:$espresso_core_version",
+            aac_core       : "androidx.arch.core:core-testing:$aac_core_version",
+            testRules      : "androidx.test:rules:$testrunner_version",
+            espressoContrib: "androidx.test.espresso:espresso-contrib:$espresso_contrib_version"
     ]
 
     injectionDependencies = [
