feat: add record audio permission
FAITH-16

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="be.hogent.faith">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <supports-screens
             android:resizeable="true"
             android:smallScreens="false"
