--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,9 @@ script:
  - adb shell settings put global window_animation_scale 0 &
  - adb shell settings put global transition_animation_scale 0 &
  - adb shell settings put global animator_duration_scale 0 &
+ - adb shell settings get global window_animation_scale 0 &
+ - adb shell settings get global transition_animation_scale 0 &
+ - adb shell settings get global animator_duration_scale 0 &
  - adb shell input keyevent 82 &
  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
  - ./gradlew connectedCheck
