--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,24 +6,6 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'composer'
-
-buildscript {
-    repositories {
-        google()
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
-    dependencies {
-        classpath 'com.github.trevjonez.composer-gradle-plugin:plugin:0.10.0'
-        classpath 'com.android.tools.build:gradle:3.3.1'
-    }
-}
-
-
-composer{
-}
-
 android {
     def globalConfig = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfig["androidCompileSdkVersion"]
@@ -55,7 +37,6 @@ dependencies {
     implementation project(':domain')
     implementation project(':service')
     implementation project(':database')
-    implementation project(':storage')
     implementation project(':draw')
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -90,9 +71,8 @@ dependencies {
 
     testImplementation testDependencies.junit
     testImplementation testDependencies.mockk
-    testImplementation androidTestDependencies.aac_core
+    testImplementation "androidx.arch.core:core-testing:$aac_core_version"
 
     androidTestImplementation androidTestDependencies.testRunner
     androidTestImplementation androidTestDependencies.espresso
 }
-
