--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':domain', ':database', ':service', ':draw', ':storage'
+include ':app', ':domain', ':database', ':service', ':draw'
